Fix label in project card not showing background colour

--- a/Theme.css
+++ b/Theme.css
@@ -714,7 +714,6 @@ tr.commit,
 .gist-snippet-meta .gist-count-links>li>a:hover,
 .markdown-body img,
 .delete-owners-button:hover,
-.btn-link,
 .avatar-child,
 .session-authentication .header-logged-out,
 .session-authentication .auth-form-header,
